# waste-detection-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  docker-compose.yml  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
db/jobs/init/: 001_init.sql
docs/architecture/: architecture.drawio
libs/shared/: CMakeLists.txt
libs/shared/include/: EnvReader.hpp
libs/shared/src/: EnvReader.cpp
services/detection-job-service/: CMakeLists.txt
services/detection-job-service/include/: Config.hpp  HealthRoutes.hpp  JobRepository.hpp  JobRoutes.hpp
services/detection-job-service/src/: Config.cpp  HealthRoutes.cpp  JobRepository.cpp  JobRoutes.cpp  main.cpp
services/flight-service/: CMakeLists.txt
services/flight-service/include/: Config.hpp  FlightRepository.hpp  FlightRoutes.hpp  HealthRoutes.hpp
services/flight-service/models/: FlightImages.cc  FlightImages.h  Flights.cc  Flights.h  model.json  model.json.template
services/flight-service/src/: Config.cpp  FlightRepository.cpp  FlightRoutes.cpp  HealthRoutes.cpp  main.cpp
